--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
               <a data-cite="mediacapture-streams/#dfn-video">"video"</a>.
             </li>
             <li>
-              <var>T</var>.<a data-cite="mediacapture-streams/#dfn-readystate">[[\ReadyState]]</a> is
-              <a data-cite="mediacapture-streams/#idl-def-MediaStreamTrackState.live">"live"</a>.
+              <var>T</var>.<a data-cite="mediacapture-streams/#dfn-readystate">[[\ReadyState]]</a>
+              is <a data-cite="mediacapture-streams/#idl-def-MediaStreamTrackState.live">"live"</a>.
             </li>
           </ul>
         </section>
@@ -268,7 +268,9 @@
           </p>
           <ul>
             <li>
-              <p><var>E</var> forms a <a data-cite="css2ed#stacking-context">stacking context</a>.</p>
+              <p>
+                <var>E</var> forms a <a data-cite="css2ed#stacking-context">stacking context</a>.
+              </p>
             </li>
             <li>
               <p>
@@ -357,9 +359,10 @@
           };
         </pre>
         <p>
-            All tasks queued below use the <a data-cite="!HTML#rendering-task-source">rendering
-            task source</a> associated with the same <a data-cite="!HTML#global object">global
-            object</a> as the {{BrowserCaptureMediaStreamTrack}}.
+          All tasks queued below use the
+          <a data-cite="!HTML#rendering-task-source">rendering task source</a> associated with the
+          same <a data-cite="!HTML#global object">global object</a> as the
+          {{BrowserCaptureMediaStreamTrack}}.
         </p>
         <dl
           data-link-for="BrowserCaptureMediaStreamTrack"
@@ -425,10 +428,10 @@
                       Call the track's state before this method invocation <var>PRE-STATE</var>, and
                       after this method invocation <var>POST-STATE</var>. The user agent MUST
                       <a data-cite="!HTML#queue-a-global-task">queue a global task</a> to resolve
-                      <var>p</var> when it is guaranteed that no more frames [=restricted=]
-                      (or [=unrestricted=]) according to <var>PRE-STATE</var> will be delivered to
-                      the application, and that any additional frames delivered to the application
-                      will therefore be [=restricted=] (or [=unrestricted=]) according to either
+                      <var>p</var> when it is guaranteed that no more frames [=restricted=] (or
+                      [=unrestricted=]) according to <var>PRE-STATE</var> will be delivered to the
+                      application, and that any additional frames delivered to the application will
+                      therefore be [=restricted=] (or [=unrestricted=]) according to either
                       <var>POST-STATE</var> or a later state.
                     </p>
                   </li>
@@ -465,25 +468,21 @@
         </li>
       </ol>
       <p>
-        The frame produced in the final step is constructed by
-        rendering <var>E</var> and its descendants over an infinite transparent
-        canvas, positioned so that the edges of the
-        <a data-cite="!css-images-4#decorated-bounding-box">decorated bounding
-        box</a> are flush with the edges of the frame.
+        The frame produced in the final step is constructed by rendering <var>E</var> and its
+        descendants over an infinite transparent canvas, positioned so that the edges of the
+        <a data-cite="!css-images-4#decorated-bounding-box">decorated bounding box</a> are flush
+        with the edges of the frame.
       </p>
       <p class="note">
-        In some implementations, the underlying pixel format for the frame data
-        will not be able to carry alpha channel information.  In this case, the
-        implementation can blend the rendered frame with an infinite canvas of black
-        (`rgb(0,0,0)`).
+        In some implementations, the underlying pixel format for the frame data will not be able to
+        carry alpha channel information. In this case, the implementation can blend the rendered
+        frame with an infinite canvas of black (`rgb(0,0,0)`).
       </p>
       <p class="note">
-        Implementations may either re-use existing bitmap data generated
-        for <var>E</var> or regenerate the display of the element to maximize
-        quality at the frame's size (for example, if the implementation detects
-        that the referenced element is an SVG fragment). However, the frame must
-        look identical to <var>E</var> as rendered above, modulo rasterization
-        quality.
+        Implementations may either re-use existing bitmap data generated for <var>E</var> or
+        regenerate the display of the element to maximize quality at the frame's size (for example,
+        if the implementation detects that the referenced element is an SVG fragment). However, the
+        frame must look identical to <var>E</var> as rendered above, modulo rasterization quality.
       </p>
     </section>
     <section id="sample-code">
